<resources>
    <string name="app_name">TripTracker</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="login_button_label">LOG IN</string>
    <string name="name_hint">Name</string>
    <string name="sign_up_button_label">Sign Me Up</string>
    <string name="APP_ID">6E3D8FDB-3E9B-4902-FFE4-CD329D593600</string>
    <string name="API_KEY">2C77BE69-3D0D-DE43-FFC8-8FEA9C2C5F00</string>
    <string name="authentication_error_title">User Authentication Error!</string>
    <string name="empty_field_signup_error">Be sure you have entered a valid email address, password(6 characters minimum), and name.</string>
    <!--fragment_trip_list -->
    <string name="trip_list_text">Trip List</string>
    <string name ="sign_up">Sign Up!</string>
    <string name ="cancel_sign_up">Cancel Sign Up</string>
    <string name="trip_map">Trip Map</string>
    <string name="check_in_button_label">Check In!</string>
    <string name="location_hint">Title</string>
    <string name="check_in_error_message">Please enter a location title.</string>
    <string name="check_in_error_title">Missing Information!</string>
    <string name="location_error_message">Your location is not detected. Make sure location services are turned on.</string>
    <string name="show_map_button_label">Show Map</string>
    <string name="location_permission_denied">You will not be able to create locations on the Map or use the Check-In feature for your trips.</string>
    <!--fragment_trip -->
    <string name="trip_details_text">Trip Details</string>
    <string name="trip_name_label">Name</string>
    <string name="trip_name_hint">Trip Name</string>
    <string name="trip_details_label">Details</string>
    <string name="trip_desc_hint">Enter a trip description </string>
    <string name="start_date_label">Start Date</string>
    <string name="end_date_label">End Date</string>
    <string name="start_date_hint">Start Date:</string>
    <string name="end_date_hint">End Date:</string>
    <string name="trip_public_label">Shared/Public?</string>
    <string name="trip_error_message">Please make sure to enter a trip name!</string>
    <string name="trip_error_title">Error!</string>
    <string name="delete_error_title">Permission Denied!</string>
    <string name="delete_error_message">You cannot delete a trip that you do not own!</string>
    <string name="post_error_title">Permission Denied!</string>
    <string name="post_error_message">You cannot modify a trip that you do not own!</string>

    <!--menu items -->
    <string name="action_settings">Settings</string>
    <string name="action_post">Post</string>
    <string name="action_delete">Delete</string>
    <string name="action_logout">Logout</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_new">New</string>
    <string name="action_public_trips">Public Trips</string>
    <string name="action_my_trips">My Trips</string>
    <string name="search">Search for trips</string>
    <item name="trip_error_title" type="id">Error saving Trip</item>
</resources>
